Todos los puntos del test completos

--- a/styles/_reset.scss
+++ b/styles/_reset.scss
@@ -15,4 +15,4 @@ ol, ul { list-style: none; }
 blockquote, q { quotes: none; }
 blockquote:before, blockquote:after, q:before, q:after { content: ''; content: none; }
 table { border-collapse: collapse; border-spacing: 0; }
-*{ -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; outline: none; }
+* { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; outline: none; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
