--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,3 +11,90 @@ body {
   font: 100% $font-stack;
   color: $primary-color;
 }
+
+main {
+	width: 100%;
+	height: 100vh;
+	position: relative;
+	text-align: center;
+	overflow: hidden;
+}
+
+h1 {
+	font-size: 24px;
+	margin: 15px auto;
+}
+
+#displayProducts {
+	width: 300px;
+	height: 300px;
+	margin: 0 auto;
+
+	p {
+		font-size: 12px;
+		text-align: justify;
+	}
+}
+
+.btn {
+	display: inline-block;
+	background: transparent;
+	border: 1px solid #000;
+	border-radius: 2px;
+	padding: 0 16px;
+	line-height: 26px;
+	width: auto;
+	height: 30px;
+	text-align: center;
+	color: #000;
+	cursor: pointer;
+	font-size: 12px;
+	margin: 5px auto;
+
+	&:hover {
+		border: 1px solid lighten(#000, 30%);
+		color: lighten(#000, 30%);
+	}
+}
+
+.modal {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 30;
+	background-color: rgba(0,0,0, .7);
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	padding: 16px;
+	overflow: hidden;
+	color: #fff;
+	display: none;
+
+	.close {
+		@extend .btn;
+		float: right;
+		color: #fff;
+		border: 1px solid #fff;
+		text-decoration: none;
+
+		&:hover {
+			border: 1px solid darken(#fff, 30%);
+			color: darken(#fff, 30%);
+		}
+	}
+
+	.productDescription {
+		width: 100%;
+	    float: left;
+	    margin: 20% auto;
+
+	    p {
+	    	width: 60%;
+	    	font-size: 14px;
+			text-align: justify;
+			margin: 0 auto;
+	    }
+	}
+}
